--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,9 @@
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.1.34",
     "mysql2": "^3.9.2",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
-    "ollama": "^0.5.0"
+    "ollama": "^0.5.0",
+    "postmark": "^4.0.2"
   }
 }
